--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tailwindcss/vite": "^4.1.3",
     "@tiptap/extension-image": "^2.11.7",
+    "@tiptap/extension-link": "^2.11.7",
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
@@ -31,6 +32,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "tailwind-merge": "^3.2.0",
+    "tiptap-extension-resize-image": "^1.2.1",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
