--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
-    "prod": "serve -s build",
+    "prod": "serve -s build -l 4000",
     "lint": "eslint .",
     "preview": "vite preview --port 4000 --host",
     "typecheck": "tsc --noEmit"
